fix timesup overflow issue

--- a/timesup/timesup.scss
+++ b/timesup/timesup.scss
@@ -56,33 +56,38 @@ $navbar-light-brand-hover-color: $body-color;//$link-hover-color;
 
 @import "bootstrap/bootstrap";
 
-@include media-breakpoint-down(xl) {
-	.container-xl {
-		overflow: hidden;
-	}
-}
-
+// @include media-breakpoint-down(xl) {
+// 	.container-xl {
+// 		overflow: hidden;
+// 	}
+// }
 
 header, section, footer {
 	padding: $spacer*3 $spacer*3;
-	margin-left: $spacer * -3 !important;
-	margin-right: $spacer * -3 !important;
+	margin-left: calc(var(--bs-gutter-x) * -0.5) !important;
+	margin-right: calc(var(--bs-gutter-x) * -0.5) !important;
 
 	&.themed {
 		background: $primary;
 // 		background-image: linear-gradient(180deg, #DF7EF4 0%, #B051DE 100%);
 		color: white;
-		border-radius: $spacer*2;
+		// border-radius: $spacer*2;
 	}
 	&.dark {
 		background: $dark;
 		color: $secondary;
-		border-radius: $spacer*2 $spacer*2 0 0;
+		// border-radius: $spacer*2 $spacer*2 0 0;
 	}
 	&.gray {
 		background: $gray-200;
 // 		color: $secondary;
-		border-radius: $spacer*2;
+		// border-radius: $spacer*2;
+	}
+	
+	@include media-breakpoint-only(xl) {
+		margin-left: $spacer * -3 !important;
+		margin-right: $spacer * -3 !important;
+		border-radius: $spacer*2 !important;
 	}
 }
 
@@ -93,11 +98,6 @@ header {
 }
 
 footer {
-	@include media-breakpoint-only(xs) {
-		margin-left: 0 !important;
-		margin-right: 0 !important;
-		margin-bottom: 1em;
-	}
 }
 
 h1 {
